--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,10 @@
 <html>
 <head>
-<meta charset="utf-8" />
+<meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    {% if page.allow_script != true %}script-src 'none';{% endif %}
+">
+<meta charset="utf-8">
 {% if page.title %}
 <title>{{ page.title }} - {{ site.title }}</title>
 {% else %}
