--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,7 @@
     default-src 'self';
     {% if page.allow_script != true %}script-src 'none';{% endif %}
 ">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 {% if page.title %}
 <title>{{ page.title }} - {{ site.title }}</title>
