some updates on index page, not complete

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 
 <hr />
-<div>
+<div class="footer">
+
 本网站版权由李超白所有。
 除非特别注明，网站内所有内容按照
 《<a href="https://creativecommons.org/licenses/by-nd/3.0/deed.zh" target="_blank">Creative Commons 署名-禁止演绎 3.0 (CC BY-ND 3.0)</a>》
@@ -12,12 +13,13 @@
 （但不包括在联系方式中填写Google表单发送电子邮件--这项服务遵从<a href="https://policies.google.com/privacy?hl=zh" target="_blank">Google隐私权政策</a>）
 都保留在您的计算机本地，不会发送到本站。
 <p />
+
 Copyright of whole website by LI, Chaobai.
-Unless otherwise stated, all contents within this website are licensed and distributed under
+Unless otherwise stated, all contents licensed and distributed under
 <a href="https://creativecommons.org/licenses/by-nd/3.0/" target="_blank">Creative Commons Noderivs license version 3.0 (CC BY-ND 3.0)</a>.
 <br />
 <strong>Privacy Notice</strong>
-This website does not intent to record your visit, nor will it impose any
+This site does not intent to record your visit, nor will it impose any
 technology(including Cookies) to track you. All your inputs during the usage of
 this website(excluding the Google form for sending Email in Contact page--where
 <a href="https://policies.google.com/privacy?hl=en" target="_blank">privacy policy of Google</a> applies) are kept locally on your computer and never
